--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "project",
   "private": true,
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2"
+    "dist-es6": "^0.1.15"
   }
 }
